--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>que ondaa paaaa</title>
 </head>
-<body> <h1>el que se mueve es</h1>
+<body> <h1>el que se mueve es gay</h1>
 <br>
-<h2>te moviste</h2>
+<h2>te moviste?</h2>
 </body>
 </html>
